--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=TCG_Commerce
+spring.application.name=TCG_Exchange
 
 # Configuracion para el acceso a la Base de Datos
 spring.jpa.hibernate.ddl-auto=create
@@ -11,7 +11,7 @@ server.port=8080
 # Datos de conexion con la base de datos MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tcg_commerce
+spring.datasource.url=jdbc:mysql://localhost:3306/tcg_exchange
 spring.datasource.username=root
 spring.datasource.password=
 
