todo funcionando, probando endpoints, retoques appproperties y cartafisica repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=TCG_Exchange
 
 # Configuracion para el acceso a la Base de Datos
-spring.jpa.hibernate.ddl-auto=create
+# cambiar valor a create si da problemas ante cambios (se pierden datos en bd al hacerlo):
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 
@@ -26,3 +27,6 @@ spring.jpa.properties.javax.persistence.sql-load-script-source=sql/datos-prueba.
 spring.security.oauth2.resourceserver.jwt.authority-prefix=
 # spring.security.oauth2.resourceserver.jwt.principal-claim-name=username
 spring.security.oauth2.resourceserver.jwt.authorities-claim-name=roles
+
+# Configuración estricta de deserialización JSON (Bad Request ante JSON mal formado)
+spring.jackson.deserialization.fail-on-unknown-properties=true
